--- a/block.html
+++ b/block.html
@@ -3,10 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pseudo Box</title>
+    <title>Pseudo</title>
     <link rel="stylesheet" href="styles/block.css">
 </head>
 <body>
-    <h1>Bad Boy</h1>
+    <h1>Bonus Module After Assignment</h1>
+    <form action="">
+        <h2>Bonus Module After Assignment</h2>
+        <input type="text">
+        <input type="text">
+        <input type="text">
+        <input type="text">
+        <br>
+    <ul>
+        <li><a href="https://www.facebook.com/">Miftah</a></li>
+        <li><a href="#">Ifti</a></li>
+        <li><a href="#">Miraz</a></li>
+        <li><a href="#">Shiraj</a></li>
+        <li><a href="#">Kafi</a></li>
+        <li><a href="#">Alamin</a></li>
+    </ul>
+    </form>
+    <div>
+        <ul>
+            <li>Miftah</li>
+            <li>Ifti</li>
+            <li>Miraz</li>
+            <li>Shiraj</li>
+            <li>Kafi</li>
+            <li>Alamin</li>
+        </ul>
+    </div>
+    
 </body>
 </html>
